--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Loading...</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
+    body {
+      height: 100vh;
+      background: radial-gradient(ellipse at center, #111 0%, #000 100%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .loader {
+      position: relative;
+      width: 120px;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: popIn 1.5s ease-out;
+    }
+
+    .loader::before, .loader::after {
+      content: '';
+      position: absolute;
+      border-radius: 50%;
+      border: 5px solid transparent;
+    }
+
+    .loader::before {
+      width: 100%;
+      height: 100%;
+      border-top: 5px solid #0ff;
+      border-bottom: 5px solid #0ff;
+      animation: spin 1s linear infinite;
+    }
+
+    .loader::after {
+      width: 80%;
+      height: 80%;
+      border-left: 5px solid #f0f;
+      border-right: 5px solid #f0f;
+      animation: spinReverse 1.5s linear infinite;
+    }
+
+    .center-dot {
+      width: 20px;
+      height: 20px;
+      background: #fff;
+      border-radius: 50%;
+      animation: pulse 1.2s infinite ease-in-out;
+      box-shadow: 0 0 15px #0ff;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes spinReverse {
+      0% { transform: rotate(360deg); }
+      100% { transform: rotate(0deg); }
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+      50% {
+        transform: scale(1.4);
+        opacity: 0.6;
+      }
+    }
+
+    @keyframes popIn {
+      0% {
+        transform: scale(0);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    .loading-text {
+      position: absolute;
+      top: 130px;
+      color: #aaa;
+      font-size: 1.1rem;
+      letter-spacing: 2px;
+      animation: fadeIn 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0.4; }
+      to { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="loader">
+    <div class="center-dot"></div>
+    <div class="loading-text">Loading...</div>
+  </div>
+
+</body>
+</html>
