--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Loading...</title>
+  <title>FocusMate - Loading</title>
   <style>
+    :root {
+      --bg: #e8f5f9;
+      --primary: #52b2cf;
+      --secondary: #a1e3d8;
+      --text: #234e52;
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -12,110 +19,83 @@
     }
 
     body {
+      background-color: var(--bg);
       height: 100vh;
-      background: radial-gradient(ellipse at center, #111 0%, #000 100%);
       display: flex;
       justify-content: center;
       align-items: center;
+      font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      flex-direction: column;
     }
 
-    .loader {
-      position: relative;
-      width: 120px;
-      height: 120px;
+    .loader-text {
+      font-size: 1.2rem;
+      color: var(--text);
+      margin-bottom: 30px;
+      animation: fadeIn 2s ease-in-out forwards;
+      opacity: 0;
+    }
+
+    .dot-loader {
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: popIn 1.5s ease-out;
+      gap: 10px;
     }
 
-    .loader::before, .loader::after {
-      content: '';
-      position: absolute;
+    .dot {
+      width: 16px;
+      height: 16px;
+      background-color: var(--primary);
       border-radius: 50%;
-      border: 5px solid transparent;
+      animation: bounce 1.2s infinite ease-in-out;
     }
 
-    .loader::before {
-      width: 100%;
-      height: 100%;
-      border-top: 5px solid #0ff;
-      border-bottom: 5px solid #0ff;
-      animation: spin 1s linear infinite;
+    .dot:nth-child(2) {
+      animation-delay: 0.2s;
+      background-color: var(--secondary);
     }
 
-    .loader::after {
-      width: 80%;
-      height: 80%;
-      border-left: 5px solid #f0f;
-      border-right: 5px solid #f0f;
-      animation: spinReverse 1.5s linear infinite;
+    .dot:nth-child(3) {
+      animation-delay: 0.4s;
     }
 
-    .center-dot {
-      width: 20px;
-      height: 20px;
-      background: #fff;
-      border-radius: 50%;
-      animation: pulse 1.2s infinite ease-in-out;
-      box-shadow: 0 0 15px #0ff;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes spinReverse {
-      0% { transform: rotate(360deg); }
-      100% { transform: rotate(0deg); }
-    }
-
-    @keyframes pulse {
-      0%, 100% {
-        transform: scale(1);
-        opacity: 1;
+    @keyframes bounce {
+      0%, 80%, 100% {
+        transform: translateY(0);
       }
-      50% {
-        transform: scale(1.4);
-        opacity: 0.6;
+      40% {
+        transform: translateY(-15px);
       }
-    }
-
-    @keyframes popIn {
-      0% {
-        transform: scale(0);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .loading-text {
-      position: absolute;
-      top: 130px;
-      color: #aaa;
-      font-size: 1.1rem;
-      letter-spacing: 2px;
-      animation: fadeIn 2s ease-in-out infinite alternate;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0.4; }
-      to { opacity: 1; }
+      to {
+        opacity: 1;
+      }
+    }
+
+    .sub-message {
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #4b7c8b;
+      opacity: 0;
+      animation: fadeIn 3s ease-in-out 1.5s forwards;
     }
   </style>
 </head>
 <body>
 
-  <div class="loader">
-    <div class="center-dot"></div>
-    <div class="loading-text">Loading...</div>
+  <div class="loader-text">Getting things ready to help you focus…</div>
+
+  <div class="dot-loader">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
   </div>
+
+  <div class="sub-message">Breathe in... Breathe out... You're doing great. 🧠💪</div>
 
 </body>
 </html>
