--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FocusMate - Loading</title>
+  <title>FocusMate - Loading & ADHD Check</title>
   <style>
     :root {
       --bg: #e8f5f9;
@@ -11,91 +11,120 @@
       --secondary: #a1e3d8;
       --text: #234e52;
     }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: var(--bg);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body, html {
+      width: 100%; height: 100%;
       font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg);
+      display: flex; justify-content: center; align-items: center;
       overflow: hidden;
       flex-direction: column;
     }
-
-    .loader-text {
-      font-size: 1.2rem;
-      color: var(--text);
-      margin-bottom: 30px;
-      animation: fadeIn 2s ease-in-out forwards;
-      opacity: 0;
-    }
-
-    .dot-loader {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .dot {
-      width: 16px;
-      height: 16px;
-      background-color: var(--primary);
-      border-radius: 50%;
-      animation: bounce 1.2s infinite ease-in-out;
-    }
-
-    .dot:nth-child(2) {
-      animation-delay: 0.2s;
-      background-color: var(--secondary);
-    }
-
-    .dot:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-
-    @keyframes bounce {
-      0%, 80%, 100% {
-        transform: translateY(0);
-      }
-      40% {
-        transform: translateY(-15px);
-      }
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
-    .sub-message {
-      margin-top: 40px;
-      font-size: 0.9rem;
-      color: #4b7c8b;
-      opacity: 0;
-      animation: fadeIn 3s ease-in-out 1.5s forwards;
-    }
+    .hidden { display: none; }
+    /* Loader styles */
+    .loader-text { font-size: 1.2rem; color: var(--text); margin-bottom: 30px; opacity: 0; animation: fadeIn 2s forwards; }
+    .dot-loader { display: flex; gap: 10px; }
+    .dot { width: 16px; height: 16px; background-color: var(--primary); border-radius: 50%; animation: bounce 1.2s infinite ease-in-out; }
+    .dot:nth-child(2) { animation-delay: 0.2s; background-color: var(--secondary); }
+    .dot:nth-child(3) { animation-delay: 0.4s; }
+    .sub-message { margin-top: 40px; font-size: 0.9rem; color: #4b7c8b; opacity: 0; animation: fadeIn 3s 1.5s forwards; }
+    @keyframes bounce { 0%,80%,100%{transform: translateY(0);}40%{transform: translateY(-15px);} }
+    @keyframes fadeIn { to { opacity: 1; } }
+    /* Quiz styles */
+    .quiz-container { background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); padding: 20px; max-width: 400px; text-align: center; }
+    .quiz-question { margin-bottom: 15px; color: var(--text); }
+    .quiz-options { list-style: none; padding: 0; }
+    .quiz-options li { margin: 8px 0; }
+    .quiz-options button { padding: 10px 20px; border: none; border-radius: 8px; background: var(--primary); color: white; cursor: pointer; }
+    .quiz-result { font-size: 1.1rem; color: var(--text); margin-top: 20px; }
   </style>
 </head>
 <body>
-
-  <div class="loader-text">Getting things ready to help you focus…</div>
-
-  <div class="dot-loader">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
+  <!-- Loader Screen -->
+  <div id="loader-screen">
+    <div class="loader-text">Getting things ready to help you focus…</div>
+    <div class="dot-loader">
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+    </div>
+    <div class="sub-message">Breathe in... Breathe out... You're doing great. 🧠💪</div>
   </div>
 
-  <div class="sub-message">Breathe in... Breathe out... You're doing great. 🧠💪</div>
+  <!-- Quiz Screen -->
+  <div id="quiz-screen" class="hidden quiz-container">
+    <div id="quiz-content">
+      <!-- Questions will be injected here -->
+    </div>
+  </div>
 
+  <!-- Main App Placeholder -->
+  <div id="app-screen" class="hidden">
+    <!-- TODO: Main app UI here -->
+    <h2>Welcome Back!</h2>
+  </div>
+
+<script>
+  // Sample ADHD-level quiz
+  const quizData = [
+    { q: 'Do you often find yourself unable to stay focused on tasks?', a: ['Never', 'Sometimes', 'Often', 'Always'] },
+    { q: 'Do you struggle with organizing tasks and activities?', a: ['Never', 'Sometimes', 'Often', 'Always'] },
+    { q: 'Do you get easily distracted by external stimuli?', a: ['Never', 'Sometimes', 'Often', 'Always'] },
+  ];
+  let currentQ = 0;
+  let score = 0;
+
+  function showQuiz() {
+    document.getElementById('loader-screen').classList.add('hidden');
+    document.getElementById('quiz-screen').classList.remove('hidden');
+    renderQuestion();
+  }
+
+  function renderQuestion() {
+    const container = document.getElementById('quiz-content');
+    const { q, a } = quizData[currentQ];
+    container.innerHTML = `<div class='quiz-question'>${q}</div><ul class='quiz-options'>${
+      a.map((opt, i) => `<li><button onclick="answer(${i})">${opt}</button></li>`).join('')
+    }</ul>`;
+  }
+
+  function answer(idx) {
+    score += idx;
+    currentQ++;
+    if (currentQ < quizData.length) renderQuestion();
+    else showResult();
+  }
+
+  function showResult() {
+    const container = document.getElementById('quiz-content');
+    const avg = score / quizData.length;
+    let level = 'Low';
+    if (avg >= 2.5) level = 'High';
+    else if (avg >= 1.5) level = 'Moderate';
+    container.innerHTML = `<div class='quiz-result'>Your ADHD focus level: <strong>${level}</strong></div>`;
+    localStorage.setItem('visited', 'true');
+    localStorage.setItem('adhdLevel', level);
+    // after a short delay, proceed to app
+    setTimeout(() => {
+      document.getElementById('quiz-screen').classList.add('hidden');
+      document.getElementById('app-screen').classList.remove('hidden');
+    }, 2000);
+  }
+
+  // On load
+  window.addEventListener('DOMContentLoaded', () => {
+    const isVisited = localStorage.getItem('visited');
+    if (!isVisited) {
+      // show quiz after loader
+      setTimeout(showQuiz, 3000);
+    } else {
+      // skip quiz, go to app
+      setTimeout(() => {
+        document.getElementById('loader-screen').classList.add('hidden');
+        document.getElementById('app-screen').classList.remove('hidden');
+      }, 2000);
+    }
+  });
+</script>
 </body>
 </html>
