--- a/index.html
+++ b/index.html
@@ -2,113 +2,154 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FocusFlow - ADHD Focus App</title>
   <style>
-    /* ---- Root & Fonts ---- */
-    :root {
-      --bg: #f0f7fc;
-      --loader-dot: linear-gradient(135deg, #52b2cf, #a1e3d8);
-      --btn-bg: linear-gradient(135deg, #ff6b6b, #f06595);
-      --circle-size: 50px;
-      --text: #1f3f5b;
-      --accent: #ff6b6b;
-      --fade-duration: 0.6s;
+    * {
+      box-sizing: border-box;
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body, html {
-      height: 100%; width: 100%;
+
+    html, body {
+      margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: var(--bg);
-      display: flex; justify-content: center; align-items: center;
+      background: #0f0f0f;
+      color: #fff;
+      height: 100%;
+      width: 100%;
     }
-    /* ---- Loader ---- */
-    #app { text-align: center; }
-    .loader { display: flex; flex-direction: column; align-items: center; animation: fadeOut 1s ease var(--fade-duration) forwards; }
-    .loader .dot { width: 25px; height: 25px; margin: 8px; border-radius: 50%; background: var(--loader-dot); animation: loaderBounce 0.6s ease-in-out infinite alternate; }
-    .loader .dot:nth-child(2) { animation-delay: 0.2s; }
-    .loader .dot:nth-child(3) { animation-delay: 0.4s; }
-    .loader p { margin-top: 12px; color: var(--text); font-size: 1.1rem; }
-    @keyframes loaderBounce { to { transform: translateY(-20px); } }
-    @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
-    /* ---- Quiz Container ---- */
+
+    #app {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
+    }
+
+    .loader {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      animation: fadeOut 1s ease 2.5s forwards;
+    }
+
+    .dot {
+      width: 20px;
+      height: 20px;
+      margin: 5px;
+      border-radius: 50%;
+      background-color: #00ffcc;
+      animation: bounce 0.6s infinite alternate;
+    }
+
+    .dot:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .dot:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes bounce {
+      to {
+        transform: translateY(-15px);
+      }
+    }
+
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+        pointer-events: none;
+      }
+    }
+
     .quiz-container {
-      background: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-      max-width: 800px;
-      width: 90%;
-      padding: 40px 20px;
-      opacity: 0;
-      animation: fadeInUp 0.8s ease 0.5s forwards;
+      width: 100%;
+      max-width: 700px;
+      background: #1a1a1a;
+      padding: 5vw;
+      border-radius: 12px;
+      box-shadow: 0 0 25px rgba(0, 255, 204, 0.2);
     }
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     .question {
-      margin-bottom: 50px;
+      margin-bottom: 40px;
     }
+
     .question p {
-      font-size: 1.3rem;
-      color: var(--text);
-      margin-bottom: 20px;
+      font-size: clamp(16px, 2vw, 20px);
+      text-align: center;
     }
-    /* ---- Likert Circles ---- */
+
     .options {
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 16px;
+      margin-top: 10px;
+      flex-wrap: wrap;
     }
+
     .circle {
-      width: var(--circle-size);
-      height: var(--circle-size);
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
-      border: 3px solid #ddd;
+      border: 3px solid;
       cursor: pointer;
-      transition: transform 0.2s, border-color 0.3s;
+      transition: transform 0.2s, border-width 0.2s;
     }
-    .circle:hover { transform: scale(1.2); }
-    .circle.selected { border-color: var(--accent); }
-    .disagree1 { background: #ff9f43; }
-    .disagree2 { background: #ff6b6b; }
-    .neutral { background: #48dbfb; }
-    .agree1 { background: #1dd1a1; }
-    .agree2 { background: #10ac84; }
+
+    .circle:hover {
+      transform: scale(1.1);
+    }
+
+    .circle.selected {
+      border-width: 5px;
+    }
+
+    .disagree1 { border-color: #ff7a00; }
+    .disagree2 { border-color: #ffaa00; }
+    .neutral   { border-color: #00ff00; }
+    .agree1    { border-color: #ff66cc; }
+    .agree2    { border-color: #ff3399; }
+
     .labels {
       display: flex;
       justify-content: space-between;
-      font-size: 0.9rem;
-      color: #666;
-      margin-top: 10px;
-      padding: 0 20px;
+      margin-top: 8px;
+      font-size: clamp(12px, 1.5vw, 14px);
+      padding: 0 10%;
+      color: #aaa;
     }
-    /* ---- Submit Button ---- */
-    .submit-btn {
-      display: block;
-      margin: 20px auto 0;
-      padding: 15px 40px;
-      font-size: 1rem;
-      font-weight: bold;
-      text-transform: uppercase;
-      background: var(--btn-bg);
-      border: none;
-      border-radius: 50px;
-      color: #fff;
-      cursor: pointer;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-      opacity: 0;
-      animation: fadeInUp 0.8s ease 1.2s forwards;
-    }
-    .submit-btn:hover { transform: translateY(-3px); box-shadow: 0 10px 25px rgba(0,0,0,0.15); }
-    /* ---- Result ---- */
+
     .quiz-result {
       text-align: center;
-      font-size: 1.5rem;
-      color: var(--accent);
-      animation: fadeInUp 0.8s ease 1s forwards;
-      opacity: 0;
+      font-size: clamp(18px, 2vw, 22px);
+      margin-top: 30px;
+      color: #00ffcc;
+    }
+
+    button {
+      padding: 12px 30px;
+      background: #00ffcc;
+      border: none;
+      border-radius: 8px;
+      color: #000;
+      font-size: 16px;
+      cursor: pointer;
+      display: block;
+      margin: 20px auto 0;
+    }
+
+    @media (max-width: 600px) {
+      .circle {
+        width: 35px;
+        height: 35px;
+      }
+
+      .quiz-container {
+        padding: 6vw 4vw;
+      }
     }
   </style>
 </head>
@@ -118,78 +159,89 @@
       <div class="dot"></div>
       <div class="dot"></div>
       <div class="dot"></div>
-      <p>Loading your focus zone...</p>
+      <p style="margin-top: 10px;">Loading your focus zone...</p>
     </div>
   </div>
 
   <script>
     const quizQuestions = [
-      'I frequently make typos, miscalculations, or other careless errors at work.',
-      'I struggle to maintain attention on tasks or conversations.',
-      'My mind often feels like it\'s racing with thoughts.',
-      'I tend to procrastinate important tasks until the last minute.',
-      'I often feel overwhelmed by routine responsibilities.',
-      'I have difficulty organizing tasks and managing time effectively.'
+      { q: 'I frequently make typos, miscalculations, or other careless errors at work.' },
+      { q: 'I struggle to maintain attention on tasks or conversations.' },
+      { q: 'My mind often feels like it\'s racing with thoughts.' },
+      { q: 'I tend to procrastinate important tasks until the last minute.' },
+      { q: 'I often feel overwhelmed by routine responsibilities.' },
+      { q: 'I have difficulty organizing tasks and managing time effectively.' },
     ];
 
     function showQuiz() {
       const app = document.getElementById('app');
       app.innerHTML = '<div class="quiz-container" id="quiz"></div>';
       const container = document.getElementById('quiz');
-      let answers = Array(quizQuestions.length).fill(null);
+      let answers = [];
 
-      quizQuestions.forEach((text, idx) => {
+      quizQuestions.forEach((item, index) => {
         const qDiv = document.createElement('div');
         qDiv.className = 'question';
         qDiv.innerHTML = `
-          <p>${idx + 1}. ${text}</p>
-          <div class="options" data-idx="${idx}">
+          <p>${index + 1}. ${item.q}</p>
+          <div class="options" data-index="${index}">
             <div class="circle disagree1" data-value="1"></div>
             <div class="circle disagree2" data-value="2"></div>
             <div class="circle neutral" data-value="3"></div>
             <div class="circle agree1" data-value="4"></div>
             <div class="circle agree2" data-value="5"></div>
           </div>
-          <div class="labels"><span>Disagree</span><span>Agree</span></div>
+          <div class="labels">
+            <span>DISAGREE</span>
+            <span>AGREE</span>
+          </div>
         `;
         container.appendChild(qDiv);
       });
 
-      document.querySelectorAll('.options').forEach(opt => {
-        opt.addEventListener('click', e => {
+      const optionGroups = document.querySelectorAll('.options');
+      optionGroups.forEach(group => {
+        group.addEventListener('click', e => {
           if (e.target.classList.contains('circle')) {
-            const val = +e.target.dataset.value;
-            const i = +opt.dataset.idx;
-            answers[i] = val;
-            opt.querySelectorAll('.circle').forEach(c => c.classList.remove('selected'));
+            const value = parseInt(e.target.dataset.value);
+            const qIndex = parseInt(group.dataset.index);
+            answers[qIndex] = value;
+
+            group.querySelectorAll('.circle').forEach(c => c.classList.remove('selected'));
             e.target.classList.add('selected');
           }
         });
       });
 
-      const btn = document.createElement('button');
-      btn.className = 'submit-btn';
-      btn.textContent = 'Submit';
-      btn.addEventListener('click', () => {
-        if (answers.includes(null)) return alert('Please answer all questions.');
-        const avg = answers.reduce((a,b) => a+b)/answers.length;
+      const submitBtn = document.createElement('button');
+      submitBtn.textContent = 'Submit';
+      submitBtn.onclick = () => {
+        if (answers.length !== quizQuestions.length || answers.includes(undefined)) {
+          alert('Please answer all questions.');
+          return;
+        }
+        const score = answers.reduce((a, b) => a + b, 0);
+        const avg = score / answers.length;
         let level = 'Low';
         if (avg >= 4) level = 'High';
         else if (avg >= 2.6) level = 'Moderate';
-        container.innerHTML = `<div class="quiz-result">Your ADHD focus level: <strong>${level}</strong></div>`;
-        localStorage.setItem('hasVisited','true');
+
+        container.innerHTML = "<div class='quiz-result'>Your ADHD focus level: <strong>" + level + "</strong></div>";
+        localStorage.setItem('hasVisited', 'true');
         localStorage.setItem('focusLevel', level);
-      });
-      container.appendChild(btn);
+      };
+      container.appendChild(submitBtn);
     }
 
     window.addEventListener('load', () => {
       setTimeout(() => {
-        if (!localStorage.getItem('hasVisited')) showQuiz();
-        else {
-          document.getElementById('app').innerHTML = `<div class="quiz-result">Welcome back! Focus level: <strong>${localStorage.getItem('focusLevel')}</strong></div>`;
+        const visited = localStorage.getItem('hasVisited');
+        if (!visited) {
+          showQuiz();
+        } else {
+          document.getElementById('app').innerHTML = "<div class='quiz-result'>Welcome back! Focus level: <strong>" + localStorage.getItem('focusLevel') + "</strong></div>";
         }
-      }, 2800);
+      }, 3000);
     });
   </script>
 </body>
